--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -136,10 +136,11 @@
   margin: 0 0 3rem;
 
   .company-logo {
-    width: 40px;
+    width: 12rem;
     max-width: 100%;
     overflow: hidden;
-    @include border-radius(45px);
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .resume-item { margin-bottom: 2rem; }
