--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -233,7 +233,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">References available on request 🤝 contact me at ethanillingworth@gmail.com</p>
+        <p class="footer-line">References available on request 🤝 contact me at <u>ethanillingworth@gmail.com</u></p>
       </footer>
 
     </div>
