contact me button animation

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -122,6 +122,20 @@
   color: #333;
   line-height: 55px;
   @include transition(all .2s ease);
+  animation-name: pastels;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+
+  @keyframes pastels {
+    0%   {background-color: #efefef;}
+    10%  {background-color: #C7CEEA;}
+    25%  {background-color: #B5EAD7;}
+    40%  {background-color: #E2F0CB;}
+    55%  {background-color: #FFDAC1;}
+    75%  {background-color: #FFB7B2;}
+    90%  {background-color: #FF9AA2;}
+    100%  {background-color: #efefef;}
+  }
 
   &:hover {
     background-color: #333;
