--- a/_includes/icon-links.html
+++ b/_includes/icon-links.html
@@ -1,4 +1,4 @@
-<!-- and guess where these are defined? Yup, you guessed it: the _config.yml file -->
+<!-- defined in the _config.yml file -->
 {% if site.resume_social_links %}
 <ul class="icon-links">
 
