--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -38,13 +38,6 @@
           {{ site.resume_header_intro }}
         </div>
 
-        {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact 👋</a>
-        {% elsif site.resume_looking_for_work == 'no' %}
-        <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
-        {% else %}
-        {% endif %}
-
       </header>
 
       {% if site.resume_section_experience %}
@@ -67,7 +60,6 @@
       </section>
       <!-- end Experience -->
       {% endif %}
-
 
       {% if site.resume_section_projects %}
       <!-- begin Projects -->
@@ -191,7 +183,15 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">References available on request 🤝 contact me at <u>ethanillingworth@gmail.com</u></p>
+
+        {% if site.resume_looking_for_work == 'yes' %}
+        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact 👋</a>
+        {% elsif site.resume_looking_for_work == 'no' %}
+        <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
+        {% else %}
+        {% endif %}
+
+        <p class="footer-line">References available on request 🤝</p>
       </footer>
 
     </div>
