eth wallet link, intro blurb update

--- a/_includes/print-social-links.html
+++ b/_includes/print-social-links.html
@@ -12,11 +12,6 @@
   <li><strong>Twitter</strong>: {{ site.resume_social_links.resume_twitter_url }}</li>
   {% endif %}
 
-  <!-- Dribbble link -->
-  {% if site.resume_social_links.resume_dribbble_url %}
-  <li><strong>Dribbble</strong>: {{ site.resume_social_links.resume_dribbble_url }}</li>
-  {% endif %}
-
   <!-- Facebook link -->
   {% if site.resume_social_links.resume_facebook_url %}
   <li><strong>Facebook</strong>: {{ site.resume_social_links.resume_facebook_url }}</li>
@@ -30,6 +25,11 @@
   <!-- Instagram link -->
   {% if site.resume_social_links.resume_instagram_url %}
   <li><strong>Instagram</strong>: {{ site.resume_social_links.resume_instagram_url }}</li>
+  {% endif %}
+
+  <!-- ethereum link -->
+  {% if site.resume_social_links.resume_ethereum_url %}
+  <li><strong>ethereum</strong>: {{ site.resume_social_links.resume_ethereum_url }}</li>
   {% endif %}
 
   <!-- Website link -->
