--- a/_includes/icon-links.html
+++ b/_includes/icon-links.html
@@ -19,11 +19,6 @@
   </li>
   {% endif %}
 
-  <!-- Dribbble link -->
-  {% if site.resume_social_links.resume_dribbble_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_dribbble_url }}" class="icon-link" itemprop="sameAs" target="_blank">{% include icons/icon-dribbble.html %}</a></li>
-  {% endif %}
-
   <!-- Facebook link -->
   {% if site.resume_social_links.resume_facebook_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_facebook_url }}" class="icon-link" itemprop="sameAs" target="_blank">{% include icons/icon-facebook.html %}</a></li>
@@ -39,6 +34,11 @@
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_instagram_url }}" class="icon-link" itemprop="sameAs" target="_blank">{% include icons/icon-instagram.html %}</a></li>
   {% endif %}
 
+  <!-- ethereum link -->
+  {% if site.resume_social_links.resume_ethereum_url %}
+  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_ethereum_url }}" class="icon-link" itemprop="sameAs" target="_blank">{% include icons/icon-ethereum.html %}</a></li>
+  {% endif %}
+  
   <!-- Website link -->
   {% if site.resume_social_links.resume_website_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_website_url }}" class="icon-link" itemprop="url" target="_blank">{% include icons/icon-website.html %}</a></li>
