--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="executive-summary" itemprop="description">
-          <p>Hello, I’m Ethan. I’m a creatively-driven person with an analytical approach to problem solving. I enjoy working with inspiring technology teams to deliver high-quality digital product on projects that I'm deeply passionate about.</p>I've worked on products, services, protocols and platforms all the way from idea to launch in sectors such as Web3, Ticketing, and Music<p><p> <span style="font-size:2rem;">🌐</span> &nbsp;&nbsp; ✧ &nbsp;&nbsp; <span style="font-size:2rem;">🎫</span> &nbsp;&nbsp; ✧ &nbsp;&nbsp; <span style="font-size:2rem;">🎵</span></p>
+          <p>I'm a creatively-driven Product person with an analytical approach to problem solving. I've spent my career building online public goods infrastructure alongside inspiring engineering teams.</p>Specialised in emergent blockchain technology helping upgrade the web to v3.0 working/consulting/advising on products, services, protocols and platforms from ideation to launch<p><p> ✧ </p>
         </div>
 
       </header>
