--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="executive-summary" itemprop="description">
-          <p>I'm a creatively-driven Product person with an analytical approach to problem solving. I've spent my career building online public goods infrastructure alongside inspiring engineering teams.</p>Specialised in emergent blockchain technology helping upgrade the web to v3.0 working/consulting/advising on products, services, protocols and platforms from ideation to launch<p><p> ✧ </p>
+          <p>I'm a creatively-driven Product person with an pragmatic approach to technological problem solving. I've spent my career building online public goods infrastructure alongside inspiring engineering teams.</p>Specialised in emergent cryptographic technology helping shift the web to something more; democratic, composable and open source. I offer my skills in product development, service consultation, and strategic advising to projects and teams that follow these principles.<p><p> ✧ </p>
         </div>
 
       </header>
